# SynthEdge

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Synthedge/: quality.py  scanner.py  synthesizer.py
synthedge/: __init__.py  cli.py  core.py  report.py  scanner.py  transfer.py
synthedge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_synthedge.py
