[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthedge"
version = "0.1.0"
description = "Diagnosis-first synthetic data augmentation for imbalanced tabular datasets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Sagnik" }]

keywords = [
    "synthetic data", "data augmentation", "imbalanced learning",
    "machine learning", "SMOTE", "CTGAN", "gap detection"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "ctgan>=0.9",
    "imbalanced-learn>=0.11",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.scripts]
synthedge = "synthedge.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/synthedge"
Issues   = "https://github.com/yourusername/synthedge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthedge*"]
